--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>ge.tsu</groupId>
-	<artifactId>jlogger</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+    <groupId>ge.tsu</groupId>
+    <artifactId>jlogger</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
-	<name>JLogger</name>
-	<description>A simple logging library for Java</description>
+    <name>JLogger</name>
+    <description>A simple logging library for Java</description>
 
-	<properties>
-		<maven.compiler.source>17</maven.compiler.source>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-	</properties>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
